libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_signature.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "Expr::from_str(&arena, r#\"{\"sig\": \"<T: Int>(a: T) -> T\"}\"#)"
---
Ok(
    Signature(
        Signature {
            generics: [
                Generic {
                    name: Symbol(
                        "T",
                    ),
                    bound: Some(
                        Symbol(
                            Symbol(
                                "Int",
                            ),
                        ),
                    ),
                },
            ],
            arguments: [
                Argument {
                    name: Symbol(
                        "a",
                    ),
                    type: Symbol(
                        Symbol(
                            "T",
                        ),
                    ),
                },
            ],
            return: Return {
                type: Symbol(
                    Symbol(
                        "T",
                    ),
                ),
            },
        },
    ),
)
