libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__string_is_invalid.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "Expr::from_str(&arena, r#\"\"1234\"\"#)"
---
Err(
    Error("invalid value: string \"1234\", expected 1234\n^\nParsing Error: ContextError { context: [], cause: None }", line: 1, column: 6),
)
