libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__string_is_path-2.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "\"foo::bar\""
---
Ok(
    Path(
        Path(
            [
                Symbol(
                    "foo",
                ),
                Symbol(
                    "bar",
                ),
            ],
        ),
    ),
)
