libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__string_is_path.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "Expr::from_str(&arena, r#\"\"symbol\"\"#)"
---
Ok(
    Path(
        Path(
            [
                Symbol(
                    "symbol",
                ),
            ],
        ),
    ),
)
