libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__string_is_signature.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: result
---
Ok(
    Signature(
        Signature {
            generics: [
                Generic {
                    name: Symbol(
                        "T",
                    ),
                    bound: Some(
                        Symbol(
                            Symbol(
                                "Int",
                            ),
                        ),
                    ),
                },
            ],
            arguments: [
                Argument {
                    name: Symbol(
                        "a",
                    ),
                    type: Symbol(
                        Symbol(
                            "T",
                        ),
                    ),
                },
            ],
            return: Return {
                type: Symbol(
                    Symbol(
                        "T",
                    ),
                ),
            },
        },
    ),
)
