libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__string_is_symbol.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: result
---
Ok(
    Symbol(
        Symbol(
            "symbol",
        ),
    ),
)
